--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.12
   http: ^0.12.2
+  path_provider: ^1.6.27
 
 
   # The following adds the Cupertino Icons font to your application.
